# masonry

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: blocking_function.rs  calc.rs  custom_widget.rs  inspector.rs  promise_button.rs  simple_image.rs  to_do_list.rs
src/: action.rs  app_delegate.rs  app_root.rs  command.rs  contexts.rs  data.rs  env.rs  event.rs  event2.rs  event_loop_runner.rs  ext_event.rs  inspector.rs  lib.rs  mouse.rs  paint_scene_helpers.rs  promise.rs  render_root.rs  text_helpers.rs  theme.rs
src/mini/: mod.rs  reactive.rs  style.rs  view.rs  views.rs
src/platform/: mod.rs  win_handler.rs  window_description.rs
src/testing/: harness.rs  helper_widgets.rs  screenshots.rs
src/text/: attribute.rs  input_component.rs  input_methods.rs  layout.rs  rich_text.rs  storage.rs
src/widget/: align.rs  button.rs  checkbox.rs  flex.rs  image.rs  label.rs  mod.rs  portal.rs  scroll_bar.rs  sized_box.rs  spinner.rs  split.rs  stack.rs  textbox.rs  widget.rs  widget_pod.rs  widget_state.rs
src/widget/tests/: layout.rs  lifecycle_basic.rs  mod.rs  safety_rails.rs  status_change.rs
src/widget/tests/snapshots/: masonry__widget__tests__lifecycle_basic__adding_child.snap.new
