[package]
authors = ["Olivier FAURE <couteaubleu@gmail.com>"]
categories = ["gui"]
description = "Data-oriented Rust UI design toolkit."
edition = "2021"
keywords = ["gui", "ui", "toolkit"]
license = "Apache-2.0"
name = "masonry"
readme = "README.md"
repository = "https://github.com/PoignardAzur/masonry-rs"
rust-version = "1.65"
version = "0.1.3"

[package.metadata.docs.rs]
# The "svg" and "image" features have doc clashes that cause undefined output in docs.
# See https://github.com/rust-lang/cargo/issues/6313 for more information.
# Once cargo doc becomes smart enough to handle multiple versions of the same crate,
# the "svg" and "image" features should be enabled for the docs.rs output.
default-target = "x86_64-pc-windows-msvc"
features = ["im"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
serde_deps = ["im/serde"]
svg = ["usvg"]

[dependencies]

# TODO - remove unused dependencies - See #10
fluent-bundle = "0.15.1"
fluent-langneg = "0.13.0"
fluent-syntax = "0.11.0"
fnv = "1.0.7"
instant = {version = "0.1.6", features = ["wasm-bindgen"]}
smallvec = "1.6.1"
tracing = "0.1.29"
tracing-subscriber = {version = "0.2.15", features = ["fmt", "ansi"], default-features = false}
unic-langid = "0.9.0"
unicode-segmentation = "1.6.0"
xi-unicode = "0.3.0"

# Optional dependencies
chrono = {version = "0.4.19", optional = true}
im = {version = "15.0.0", optional = true}
usvg = {version = "0.14.1", optional = true}

# TODO - make serde a dev dependency
image = "0.24.0"
once_cell = "1.9.0"
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.74"
vello = "0.1.0"
winit = "0.29.15"

[target.'cfg(target_arch="wasm32")'.dependencies]
console_error_panic_hook = {version = "0.1.6"}
tracing-wasm = {version = "0.2.0"}

[dev-dependencies]
float-cmp = {version = "0.8.0", features = ["std"], default-features = false}
insta = {version = "1.8.0"}
# tempfile 3.2.0 broke wasm; I assume it will be yanked (Jan 12, 2021)
assert_matches = "1.5.0"
pulldown-cmark = {version = "0.8", default-features = false}
tempfile = "=3.1.0"

[target.'cfg(not(target_arch="wasm32"))'.dev-dependencies]
open = "1.6"

[[example]]
name = "simple_image"
required-features = ["image", "png"]
